# hackathon-preparation

./: agent.ipynb  documentation.md  file_summaries.md  folder_structure.md  instructions.md  pyproject.toml
