[tool.poetry]
name = "code-agent"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
anthropic = "^0.36.0"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
python-dotenv = "^1.0.1"
langchain-community = "^0.3.2"
langchain-mistralai = "^0.2.0"
mistralai = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
